# oxidix

./: Cargo.toml  README.md  flake.nix
nix-ast/: Cargo.toml
nix-ast/examples/: README.md  basic_lexing.rs  nix_formatter.rs
nix-ast/fixtures/: array_with_expression.nix  attrset.nix  if_throw.nix  invalid_syntax.nix  lambda_empty_set_bound.nix  lambda_set.nix  lambda_unpacked_set.nix  lambda_with_bound.nix  let_in.nix  let_inherits.nix  operator_precedence.nix  select_or.nix
nix-ast/src/: error.rs  lib.rs
nix-ast/src/expression/: array.rs  attrset.rs  binary.rs  if.rs  lambda.rs  let.rs  mod.rs  throw.rs  unary.rs
nix-ast/src/snapshots/: nix_ast__test__fixture.snap  nix_ast__test__fixture@array_with_expression.nix.snap  nix_ast__test__fixture@attrset.nix.snap  nix_ast__test__fixture@if_statement.nix.snap  nix_ast__test__fixture@if_throw.nix.snap  nix_ast__test__fixture@invalid_syntax.nix.snap  nix_ast__test__fixture@lambda_basic.nix.snap  nix_ast__test__fixture@lambda_empty_set.nix.snap  nix_ast__test__fixture@lambda_empty_set_bound.nix.snap  nix_ast__test__fixture@lambda_set.nix.snap  (+6 more)
nix-lexer/: Cargo.toml
nix-lexer/fixtures/: dollar_string.nix  empty_multiline_string.nix  empty_string.nix  multiline_string.nix  multiline_string_double_dollar_escaped_interpolation.nix  multiline_string_escaped_exit.nix  multiline_string_escaped_exit_end.nix  multiline_string_escaped_interpolation.nix  multiline_string_literal_newline.nix  multiline_string_simple_interpolation.nix  string.nix  string_complex_interpolation.nix  string_double_dollar_escaped_interpolation.nix  string_escaped_exit.nix  string_escaped_interpolation.nix  string_immediate_interpolation.nix  string_simple_interpolation.nix  variables.nix
nix-lexer/src/: lib.rs
(+20 files in other folders)
