[package]
name = "nix-ast"
description = "AST for the Nix programming language"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["ast", "parser", "nix", "oxidix"]
categories = ["parser-implementations"]

[dependencies]
nix-lexer = { path = "../nix-lexer" }
thiserror = "2"
ariadne = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
nix-ast = { path = ".", features = ["ariadne"] }
insta = { version = "1.43", features = ["glob"] }
